--- a/frontend/src/styles/Search.module.scss
+++ b/frontend/src/styles/Search.module.scss
@@ -14,6 +14,11 @@ html {
   }
 }
 
+.color_map {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 @media only screen and (min-device-width: 1200px) {
 
   .beside img {
