--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1rem;
-  background-color: #fff;
+  padding: 1.5rem 1rem;
+  background-color: #f5f5f5;
   border-bottom: 1px solid #e6e6e6;
 }
