--- a/src/styles/Search.module.scss
+++ b/src/styles/Search.module.scss
@@ -1,7 +1,19 @@
 html {
   max-width: 1200px;
   margin: 0 auto;
+  font-family: "Helvetica Neue",
+    Arial,
+    "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans",
+    "Meiryo",
+    sans-serif;
+  color: #333;
 }
+
+// .serch_wrap {
+//   max-width: 1200px;
+//   margin: 0 auto;
+// }
 
 .beside {
   display: flex;
