--- a/src/styles/Search.module.scss
+++ b/src/styles/Search.module.scss
@@ -19,7 +19,7 @@ html {
   display: flex;
   overflow-x: scroll;
   text-align: center;
-
+  min-height: 290px;
   img {
     width: 35vw;
     padding: 2vw;
@@ -27,14 +27,13 @@ html {
 }
 
 .color_map {
-  padding-top: 50px;
+  padding-top: 20px;
   padding-bottom: 50px;
 
   .stack_wrap {
     padding: 2vw;
   }
 }
-
 
 
 @media only screen and (min-device-width: 1200px) {
