--- a/src/styles/Search.module.scss
+++ b/src/styles/Search.module.scss
@@ -1,5 +1,5 @@
 html {
-  max-width: 1200px;
+  // max-width: 1200px;
   margin: 0 auto;
   font-family: "Helvetica Neue",
     Arial,
@@ -16,6 +16,8 @@ html {
 // }
 
 .beside {
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   overflow-x: scroll;
   text-align: center;
