--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -2,13 +2,17 @@
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #e9eff9;
   border-bottom: 1px solid #e6e6e6;
   font-size: 1.2em;
 
   h1 {
-    padding-left: 50px;
+    padding-left: 10px;
+  }
+
+  img {
+    padding-left: 20px;
+    width: 50px;
   }
 }
